# tezzera

./: Cargo.toml  README.md
.steering/: DECISIONS.md  PHASE_10.md  PHASE_11.md  PHASE_15.md  PHASE_16.md  PHASE_17.md  PHASE_3.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  RENDER_ENGINE.md
tezzera-a11y/: Cargo.toml
tezzera-a11y/src/: focus.rs  focus_node.rs  lib.rs  node.rs  role.rs  tree.rs
tezzera-anim/: Cargo.toml
tezzera-anim/src/: easing.rs  lerp.rs  lib.rs  timeline.rs
tezzera-animate/: Cargo.toml
tezzera-bidi/: Cargo.toml
tezzera-bidi/src/: level.rs  lib.rs
tezzera-cli/: Cargo.toml
tezzera-cli/src/: main.rs
tezzera-cli/src/commands/: analyze.rs  build.rs  dev.rs  mod.rs  new.rs  package.rs  snapshot.rs
tezzera-clipboard/: Cargo.toml
tezzera-clipboard/src/: lib.rs  system.rs
tezzera-compositor/: Cargo.toml
tezzera-compositor/src/: lib.rs  shader.wgsl
tezzera-core/: Cargo.toml
tezzera-core/src/: app.rs  component.rs  context.rs  element.rs  error.rs  error_boundary.rs  lib.rs  lifecycle.rs  render_object.rs  semantic_node.rs  types.rs
tezzera-devtools/: Cargo.toml
tezzera-devtools/src/: atom_inspector.rs  dev_console.rs  lib.rs  trace_viewer.rs
tezzera-examples/: Cargo.toml
tezzera-forms/: Cargo.toml
tezzera-forms/src/: field.rs  lib.rs
tezzera-gesture/src/: lib.rs  pinch.rs  tap.rs
tezzera-hot-reload/: Cargo.toml
tezzera-hot-reload/src/: lib.rs  rebuild.rs  watcher.rs
tezzera-i18n/: Cargo.toml
tezzera-i18n/src/: lib.rs  provider.rs
tezzera-ime/: Cargo.toml
tezzera-layout/: Cargo.toml
tezzera-layout/src/: lib.rs
tezzera-layout/src/widgets/: aspect_ratio.rs  column.rs  expanded.rs  flex.rs  grid.rs  row.rs  sized_box.rs  spacer.rs  stack.rs  wrap.rs
tezzera-macros/: Cargo.toml
tezzera-macros/src/: lib.rs  state.rs
tezzera-nav/: Cargo.toml
tezzera-nav-anim/: Cargo.toml
tezzera-nav-anim/src/: lib.rs  navigator.rs  transition.rs
tezzera-nav/src/: lib.rs  stack.rs
tezzera-net/: Cargo.toml
tezzera-net/src/: lib.rs  load_state.rs
tezzera-platform/: Cargo.toml
tezzera-platform/src/: app.rs  event.rs  lib.rs
tezzera-render/: Cargo.toml
tezzera-render/src/: canvas.rs  draw_command.rs  font.rs  lib.rs  picture.rs  render_pipeline.rs
tezzera-scroll/src/: scrollbar.rs
tezzera-shaping/: Cargo.toml
tezzera-shaping/src/: engine.rs  fallback.rs  glyph.rs  lib.rs  pipeline.rs
tezzera-state/: Cargo.toml
tezzera-state/src/: atom.rs  atom_id_gen.rs  batch.rs  cleanup_store.rs  frame_scheduler.rs  global_atom.rs  lib.rs  refresh_engine.rs  state_store.rs
tezzera-style/: Cargo.toml
tezzera-style/src/: computed.rs  lib.rs  sheet.rs  value.rs
tezzera-text/src/: cursor.rs  direction.rs  layout.rs  lib.rs  metrics.rs  rich_text.rs  span.rs
tezzera-trace/: Cargo.toml
tezzera-widgets/: Cargo.toml
tezzera-widgets/src/: button.rs  checkbox.rs  counter_app.rs  image.rs  lib.rs  overlay.rs  prelude.rs  progress_bar.rs  slider.rs  switch.rs  text.rs  text_input.rs
tezzera-widgets/src/tree/: mod.rs  transform_layer.rs
tezzera/src/: lib.rs
