[package]
name = "tezzera-shaping"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tezzera-core   = { path = "../tezzera-core" }
tezzera-render = { path = "../tezzera-render" }
tezzera-text   = { path = "../tezzera-text" }
tezzera-trace  = { path = "../tezzera-trace" }
